[gd_scene load_steps=50 format=3 uid="uid://kudxacse2ddq"]

[ext_resource type="Texture2D" uid="uid://by7bw5k2t1nrj" path="res://assets/sprites/title/background_title.png" id="1_6lybn"]
[ext_resource type="Script" uid="uid://c0oe21xmrm3rb" path="res://scripts/other/title_button_manager.gd" id="1_dwypo"]
[ext_resource type="Texture2D" uid="uid://dmnfj2n47fn7b" path="res://assets/sprites/title/counter.png" id="2_udrvt"]
[ext_resource type="Texture2D" uid="uid://c2g2468d6tpig" path="res://assets/sprites/title/foodstuff.png" id="3_bae0g"]
[ext_resource type="Texture2D" uid="uid://b8fvxkd0eg2qf" path="res://assets/sprites/title/title_sign_sheet.png" id="3_c2y2l"]
[ext_resource type="Texture2D" uid="uid://dxl3ylbufupui" path="res://assets/sprites/title/background_title_buttons.png" id="3_e8nv5"]
[ext_resource type="Script" uid="uid://cqd44rlpbj7lj" path="res://scripts/components/autoplay_comp.gd" id="4_6lybn"]
[ext_resource type="Script" uid="uid://c2pdq1vfrqvvy" path="res://scripts/other/rects/fade_out.gd" id="7_udrvt"]
[ext_resource type="FontFile" uid="uid://bu2fl6x507ljj" path="res://assets/fonts/4x4-font.ttf" id="8_gnnkw"]
[ext_resource type="AudioStream" uid="uid://bfxhlfbwir12e" path="res://assets/audio/startup_click.wav" id="9_6yeny"]
[ext_resource type="Script" uid="uid://xrifvbhed3bb" path="res://scripts/other/rects/fade_to_next_from_title.gd" id="10_gnnkw"]
[ext_resource type="Script" uid="uid://buik2yejvbf4x" path="res://scripts/components/mouseignore_comp.gd" id="10_rfda8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3eh1d"]
atlas = ExtResource("3_bae0g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywluy"]
atlas = ExtResource("3_bae0g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl4hr"]
atlas = ExtResource("3_bae0g")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p40pm"]
atlas = ExtResource("3_bae0g")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xd0mm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eh1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywluy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl4hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p40pm")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e8nv5"]
atlas = ExtResource("3_c2y2l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_udrvt"]
atlas = ExtResource("3_c2y2l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv65u"]
atlas = ExtResource("3_c2y2l")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bae0g"]
atlas = ExtResource("3_c2y2l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnnkw"]
atlas = ExtResource("3_c2y2l")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfda8"]
atlas = ExtResource("3_c2y2l")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yeny"]
atlas = ExtResource("3_c2y2l")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bclnd"]
atlas = ExtResource("3_c2y2l")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3eh1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8nv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udrvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv65u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv65u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bae0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnnkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfda8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yeny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yeny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bclnd")
}],
"loop": true,
"name": &"default",
"speed": 3.5
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_udrvt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88chj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wv65u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvmup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bae0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q78dq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gnnkw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d0wcn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rfda8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nn7l4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6yeny"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwypo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ighft"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_04u3k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2y2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6lybn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e8nv5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bclnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3eh1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywluy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rl4hr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p40pm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xd0mm"]

[node name="title" type="Node2D"]

[node name="Backdrop" type="CanvasLayer" parent="."]

[node name="TitleBackTile" type="Sprite2D" parent="Backdrop"]
texture = ExtResource("1_6lybn")
centered = false

[node name="Counter" type="Sprite2D" parent="Backdrop/TitleBackTile"]
texture = ExtResource("2_udrvt")
centered = false

[node name="Counter2" type="Sprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(75, 0)
texture = ExtResource("2_udrvt")
centered = false
flip_h = true

[node name="Foodstuff" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(13, 49)
sprite_frames = SubResource("SpriteFrames_xd0mm")
frame = 3
speed_scale = 0.0
flip_h = true

[node name="Foodstuff2" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(112, 36)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_xd0mm")
speed_scale = 0.0

[node name="Foodstuff3" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(105, 58)
sprite_frames = SubResource("SpriteFrames_xd0mm")
frame = 2
speed_scale = 0.0
flip_h = true
flip_v = true

[node name="Foodstuff4" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(18, 30)
sprite_frames = SubResource("SpriteFrames_xd0mm")
frame = 2
speed_scale = 0.0

[node name="Foodstuff5" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(11, 8)
sprite_frames = SubResource("SpriteFrames_xd0mm")
frame = 1
speed_scale = 0.0

[node name="Foodstuff6" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(16, 81)
sprite_frames = SubResource("SpriteFrames_xd0mm")
speed_scale = 0.0
flip_h = true

[node name="Foodstuff7" type="AnimatedSprite2D" parent="Backdrop/TitleBackTile"]
position = Vector2(103, 29)
sprite_frames = SubResource("SpriteFrames_xd0mm")
frame = 3
speed_scale = 0.0

[node name="CrucialElements" type="CanvasLayer" parent="."]
script = ExtResource("1_dwypo")

[node name="TitleSign" type="AnimatedSprite2D" parent="CrucialElements"]
position = Vector2(63, 20)
sprite_frames = SubResource("SpriteFrames_3eh1d")
frame = 5
frame_progress = 0.176134

[node name="autoplay_comp" type="Node" parent="CrucialElements/TitleSign"]
script = ExtResource("4_6lybn")
metadata/_custom_type_script = "uid://cqd44rlpbj7lj"

[node name="TitleBkg" type="Sprite2D" parent="CrucialElements"]
position = Vector2(60, 80)
texture = ExtResource("3_e8nv5")

[node name="SaveButton" type="Button" parent="CrucialElements"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 26.0
offset_right = 26.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0.470588, 0.223529, 0.207843, 1)
theme_override_colors/font_hover_color = Color(0.470588, 0.223529, 0.207843, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_gnnkw")
theme_override_font_sizes/font_size = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_udrvt")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_88chj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wv65u")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lvmup")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_bae0g")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_q78dq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gnnkw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_d0wcn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rfda8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_nn7l4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6yeny")
text = "press
again"
alignment = 0

[node name="SaveGuard" type="Button" parent="CrucialElements"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 30.0
offset_right = 26.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0.470588, 0.223529, 0.207843, 1)
theme_override_colors/font_hover_color = Color(0.470588, 0.223529, 0.207843, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_gnnkw")
theme_override_font_sizes/font_size = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_dwypo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ighft")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_04u3k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c2y2l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6lybn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e8nv5")
text = "new save"
alignment = 0

[node name="LoadButton" type="Button" parent="CrucialElements"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 20.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0.470588, 0.223529, 0.207843, 1)
theme_override_colors/font_hover_color = Color(0.470588, 0.223529, 0.207843, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_gnnkw")
theme_override_font_sizes/font_size = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_bclnd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3eh1d")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ywluy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rl4hr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p40pm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xd0mm")
text = "play"
alignment = 0

[node name="ClickSFX" type="AudioStreamPlayer" parent="CrucialElements"]
stream = ExtResource("9_6yeny")

[node name="Rects" type="CanvasLayer" parent="."]

[node name="FadeAwayRect" type="ColorRect" parent="Rects"]
visible = false
offset_right = 120.0
offset_bottom = 90.0
color = Color(0.0235294, 0.0392157, 0.0745098, 1)
script = ExtResource("7_udrvt")

[node name="mouseignore_comp" type="Node" parent="Rects/FadeAwayRect"]
script = ExtResource("10_rfda8")
metadata/_custom_type_script = "uid://buik2yejvbf4x"

[node name="FadeToRect" type="ColorRect" parent="Rects"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 120.0
offset_bottom = 90.0
color = Color(0.0235294, 0.0392157, 0.0745098, 1)
script = ExtResource("10_gnnkw")

[node name="mouseignore_comp" type="Node" parent="Rects/FadeToRect"]
script = ExtResource("10_rfda8")
metadata/_custom_type_script = "uid://buik2yejvbf4x"

[connection signal="pressed" from="CrucialElements/SaveButton" to="CrucialElements" method="_on_save_pressed"]
[connection signal="pressed" from="CrucialElements/SaveButton" to="Rects/FadeToRect" method="_on_save_button_pressed"]
[connection signal="pressed" from="CrucialElements/SaveGuard" to="CrucialElements" method="_on_save_guard_pressed"]
[connection signal="pressed" from="CrucialElements/LoadButton" to="CrucialElements" method="_on_load_pressed"]
[connection signal="pressed" from="CrucialElements/LoadButton" to="Rects/FadeToRect" method="_on_load_button_pressed"]
